# cmake_testing_cpp

./: .gitignore  CMakeLists.txt  main.cpp
